# Identification

./: .cproject  .project
central_controller/: .cproject  .project  CMakeLists.txt  package.xml
central_controller/launch/: central_controller.launch
central_controller/src/: central_controller.cpp
identification_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
identification_msgs/msg/: ArmControlCommands.msg~  CentralControllorStates.msg~  HandControlCommands.msg~  IdentificationControllerStates.msg~  IdentificationStates.msg~  IdentificationSystemStates.msg~  IdentifierControlCommands.msg  IdentifierControlCommands.msg~  IdentifierStates.msg  PlannerControlCommands.msg  PlannerControlCommands.msg~  PlannerStates.msg  TactileProcessorControlCommands.msg  TactileProcessorStates.msg  TactileProcessorStates.msg~
identifier/: .cproject  .project  CMakeLists.txt  package.xml
identifier/ExpData/: 0_finger_0_NT.pcd  0_finger_0_T.pcd  0_finger_1_NT.pcd  0_finger_1_T.pcd  0_finger_2_NT.pcd  0_finger_2_T.pcd  0_target.pcd  Nov_10_Exp_0_Id_2_1_PTCC_0_finger_0_NT.pcd  Nov_10_Exp_0_Id_2_1_PTCC_0_finger_0_T.pcd  Nov_10_Exp_0_Id_2_1_PTCC_0_finger_1_NT.pcd  Nov_10_Exp_0_Id_2_1_PTCC_0_finger_1_T.pcd  Nov_10_Exp_0_Id_2_1_PTCC_0_finger_2_NT.pcd  Nov_10_Exp_0_Id_2_1_PTCC_0_finger_2_T.pcd  Nov_10_Exp_0_Id_2_1_PTCC_0_target.pcd  Nov_10_Exp_0_Id_2_1_PTCC_0_target_aligned.pcd  Nov_12_Exp_1_Id_3_PTCC_0_finger_0_NT.pcd  Nov_12_Exp_1_Id_3_PTCC_0_finger_0_T.pcd  Nov_12_Exp_1_Id_3_PTCC_0_finger_1_NT.pcd  Nov_12_Exp_1_Id_3_PTCC_0_finger_1_T.pcd  Nov_12_Exp_1_Id_3_PTCC_0_finger_2_NT.pcd  Nov_12_Exp_1_Id_3_PTCC_0_finger_2_T.pcd  Nov_12_Exp_1_Id_3_PTCC_0_target.pcd  Oct_9_Exp_1_Id_1_PTCC_0_target.pcd  compression_distance_timing.txt  compression_force_timing.txt  contact_feature.txt  finger_0_contact_force_timing.txt  finger_1_contact_force_timing.txt  finger_2_contact_force_timing.txt  grid.ipynb
identifier/PCD/: model.pcd  scene.pcd  tea_box.pcd  transformed_tea_box.pcd
identifier/include/: head.h  model.cpp  model.h  recog.cpp  recog.h
identifier/launch/: identifier.launch
identifier/src/: identifier.cpp
knowledge_base/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
knowledge_base/A/: 0_order.txt  6.pcd  9.pcd  A.pcd  left.txt  origin.pcd  part0.pcd  part1.pcd  part10.pcd  part11.pcd  part12.pcd  part13.pcd  part14.pcd  part15.pcd  part2.pcd  part3.pcd  part4.pcd  part5.pcd  part6.pcd  part7.pcd  part8.pcd  part9.pcd  properties.yaml~  reconstruct_A.pcd  reconstructed_A.pcd  right.txt  rolls.txt  zs.txt
knowledge_base/B/: 0_order.txt  1_order.txt  2_B.model  3.pcd  5.pcd  6.pcd  B.pcd  entropy_x.txt  entropy_y.txt  left.txt  origin.pcd  part0.pcd  part1.pcd  part10.pcd  part11.pcd  part12.pcd  part13.pcd  part14.pcd  part15.pcd  part2.pcd  part3.pcd  part4.pcd  part5.pcd  part6.pcd  part7.pcd  part8.pcd  part9.pcd  pitchs.txt  properties.yaml  reconstructed_B.pcd  remain_x.txt  remain_y.txt  right.txt
knowledge_base/C/: 0_order.txt  12.pcd  16.pcd  1_order.txt  3_C.model  C.pcd  entropy_x.txt  left.txt  origin.pcd  part0.pcd  part1.pcd  part10.pcd  part11.pcd  part12.pcd  part13.pcd  part14.pcd  part15.pcd  part2.pcd  part3.pcd  part4.pcd  part5.pcd  part6.pcd  part7.pcd  part8.pcd  part9.pcd  properties.yaml~  reconstructed_C.pcd  remain_x.txt  remain_y.txt  right.txt  saveScore.txt  yaws.txt  ys.txt  zs.txt
knowledge_base/D/: 0_order.txt  10.pcd  12.pcd  13.pcd  1_order.txt  4_D.model  5.pcd  6.pcd  8.pcd  D.pcd  entropy_x.txt  entropy_y.txt  left.txt  origin.pcd  part0.pcd  part1.pcd  part10.pcd  part11.pcd  part12.pcd  part13.pcd  part14.pcd  part15.pcd  part2.pcd  part3.pcd  part4.pcd  part5.pcd  part6.pcd  part7.pcd  part8.pcd  part9.pcd  properties.yaml~  reconstructed_D.pcd  remain_x.txt  remain_y.txt  right.txt  xs.txt  zs.txt
knowledge_base/E/: 0_order.txt  1_order.txt  5_E.model  9.pcd  E.pcd  database  entropy_x.txt  left.txt  origin.pcd  part0.pcd  part1.pcd  part10.pcd  part11.pcd  part12.pcd  part13.pcd  part14.pcd  part15.pcd  part2.pcd  part3.pcd  part4.pcd  part5.pcd  part6.pcd  part7.pcd  part8.pcd  part9.pcd  properties.yaml~  reconstructed_E.pcd  remain_x.txt  remain_y.txt  right.txt  rolls.txt  yaws.txt
knowledge_base/F/: 0_order.txt  1.pcd  12.pcd  13.pcd  16.pcd  1_order.txt  4.pcd  6.pcd  6_F.model  8.pcd  F.pcd  entropy_x.txt  entropy_y.txt  left.txt  origin.pcd  part0.pcd  part1.pcd  part10.pcd  part11.pcd  part12.pcd  part13.pcd  part14.pcd  part15.pcd  part2.pcd  part3.pcd  part4.pcd  part5.pcd  part6.pcd  part7.pcd  part8.pcd  part9.pcd  reconstructed_F.pcd  remain_x.txt  remain_y.txt  right.txt  yaws.txt  zs.txt
knowledge_base/G/: 0_order.txt  10.pcd  11.pcd  12.pcd  14.pcd  16.pcd  1_order.txt  3.pcd  5.pcd  6.pcd  7_G.model  8.pcd  G.pcd  entropy_x.txt  entropy_y.txt  left.txt  origin.pcd  part0.pcd  part1.pcd  part10.pcd  part11.pcd  part12.pcd  part13.pcd  part14.pcd  part15.pcd  part2.pcd  part3.pcd  part4.pcd  part5.pcd  part6.pcd  part7.pcd  part8.pcd  part9.pcd  properties.yaml  reconstructed_G.pcd  remain_x.txt  remain_y.txt  right.txt  zs.txt
knowledge_base/H/: 0_order.txt  1.pcd  5.pcd  8_H.model  H.pcd  entropy_x.txt  left.txt  origin.pcd  part0.pcd  part1.pcd  part2.pcd  part3.pcd  part4.pcd  part5.pcd  part6.pcd  part7.pcd  reconstructed_H.pcd  right.txt  xs.txt
knowledge_base/I/: 0_order.txt  (+26 more)
lwr_sdh_planner/: .cproject  .project  CMakeLists.txt  package.xml
lwr_sdh_planner/launch/: planner.launch
lwr_sdh_planner/resources/: lwr_simplified.srdf  lwr_simplified.srdf~  rviz.rviz
lwr_sdh_planner/src/: lwr_end_pos_pub_for_test.cpp  planner.cpp
modelling/: .cproject  .project  CMakeLists.txt  package.xml
modelling/include/modelling/: properties.h
modelling/src/: experiment.cpp  extract_feature.cpp  extract_feature.h  kinect2_point_filter.cpp  main.cpp  model.cpp  model.h  model_builder.cpp  model_builder.h  modelling.cpp  modelling.h  pose_tracker.cpp  properties.cpp  properties.h  recog.cpp  recog.h  search_tree.cpp
tactile_processor/: .cproject  .project  CMakeLists.txt  package.xml
(+2149 files in other folders)
