<?xml version="1.0"?>
<package>
  <name>central_controller</name>
  <version>0.0.0</version>
  <description>The central_controller package</description>
  <maintainer email="yuanfei@hit.edu.cn">yuanfei</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
   
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>identification_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>identification_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>