<?xml version="1.0"?>
<package>
  <name>lwr_sdh_planner</name>
  <version>0.0.0</version>
  <description>The lwr_sdh_planner package</description>
  <maintainer email="yuanfei.zhang@hit.edu.cn">Yuanfei Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>exotica</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>ik_solver</build_depend>
  <build_depend>task_map</build_depend> 
  <build_depend>moveit_msgs</build_depend> 
  <build_depend>identification_msgs</build_depend> 

  <run_depend>trac_ik_lib</run_depend>
  <run_depend>roscpp</run_depend> 
  <run_depend>geometry_msgs</run_depend>  
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>exotica</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>ik_solver</run_depend>
  <run_depend>task_map</run_depend> 
  <run_depend>moveit_msgs</run_depend>
  <run_depend>identification_msgs</run_depend>
</package>